# nand2hasktris

./: LICENSE  README.md  nand2hasktris.cabal
src/: Parse.hs
src/ASM/: Types.hs
src/Machine/: Emulator.hs
