name:                nand2hasktris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holguinj/nand2hasktris#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Holguin
maintainer:          justin.h.holguin@gmail.com
copyright:           2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nand2hasktris
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
