name:                nand2hasktris
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/holguinj/nand2hasktris#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Holguin
maintainer:          justin.h.holguin@gmail.com
copyright:           2018
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nand2hasktris
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.0 && < 0.6.0.0
                     , vector >= 0.12.0.0 && < 0.13.0.0
                     , free >= 4.12.0 && < 5.0.0
